--- a/explorexp/templates/map.html
+++ b/explorexp/templates/map.html
@@ -2,10 +2,20 @@
 {% extends 'mapBase.html' %}
 {% load static %}
 {% block content %}
-
+<script>
+    function initMap() {
+        // Define your Google Maps initialization logic here
+        var mapOptions = {
+            center: { lat: -34.397, lng: 150.644 },
+            zoom: 8
+        };
+        var map = new google.maps.Map(document.getElementById('map'), mapOptions);
+    }
+</script>
 <script async defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCAc74O5Z2PVfxjPpuoqktAT5wGuiIs-qQ&callback=initMap">
     </script>
+
     <style>
         #map {
             height: 700px;
