--- a/explorexp/templates/map.html
+++ b/explorexp/templates/map.html
@@ -1,4 +1,4 @@
-
+{% extends 'base.html' %}
 {% extends 'mapBase.html' %}
 {% load static %}
 {% block content %}
@@ -12,7 +12,7 @@
         var map = new google.maps.Map(document.getElementById('map'), mapOptions);
     }
 </script>
-<script async defer
+    <script async defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCAc74O5Z2PVfxjPpuoqktAT5wGuiIs-qQ&callback=initMap">
     </script>
 
