--- a/explorexp/templates/categories.html
+++ b/explorexp/templates/categories.html
@@ -1,10 +1,18 @@
-<!DOCTYPE html>
+
+{% extends 'mapBase.html' %}
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Categories</title>
 
-    <style>
+
+</head>
+<body>
+
+
+{% block content %}
+  <style>
     body {
       font-family: 'Times New Roman', serif;
       background-color: #f8f8f8;
@@ -32,24 +40,52 @@
       background-color: ##f46e1e;
     }
  </style>
-</head>
-<body>
-
-
-
-<h2>Welcome to categories!</h2>
+<h1>Welcome to categories!</h1>
   <button class="filterButton category-link" data-location-type="Study Spaces">Study Spaces</button>
   <button class="filterButton category-link" data-location-type="Lounges">Lounges</button>
   <button class="filterButton category-link" data-location-type="Café">Cafés</button>
   <button class="filterButton category-link" data-location-type="Libraries">Libraries</button>
   <button class="filterButton category-link" data-location-type="Museums">Museums</button>
   <button class="filterButton category-link" data-location-type="Gyms">Gyms</button>
-  <button class="filterButton category-link" data-location-type="Bowling Alleys">Bowling Alleys</button>
+  <button class="filterButton category-link" data-location-type="Gyms">Parks</button>
   <button class="filterButton category-link" data-location-type="Arcades">Arcades</button>
   <button class="filterButton category-link" data-location-type="Restaurants">Restaurants</button>
   <button class="filterButton category-link" data-location-type="Night Life">Night Life</button>
+<script>
+    function initMap() {
+        // Define your Google Maps initialization logic here
+        var mapOptions = {
+            center: {lat: 38.0336, lng: -78.5080},
+            zoom: 15,
+            styles: [
+            {
+                featureType: 'poi',
+                stylers: [
+                    { visibility: 'off' }
+                ]
+            }
+        ]
+        };
+        var map = new google.maps.Map(document.getElementById('map'), mapOptions);
+    }
+</script>
+    <script async defer
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCAc74O5Z2PVfxjPpuoqktAT5wGuiIs-qQ&callback=initMap">
+    </script>
 
+    <style>
+        #map {
+            height: 80%;
+            width: 50%;
+        }
 
+         </style>
 
+    <div class="linkholder">
+        <div class="mapholder">
+            <div id="map"></div>
+        </div>
+    </div>
+
+{% endblock %}
 </body>
-</html>
