--- a/explorexp/templates/index.html
+++ b/explorexp/templates/index.html
@@ -9,6 +9,7 @@
     <h1 style="text-align: center;"> My google OAuth Project </h1>
     {% if user.is_authenticated %}
     <p>Welcome. You are logged in as {{user.username}} </p>
+    <a href="{% url 'view_profile' username=request.user.username %}">Go to Profile</a>
     {% else %}
         <a href="{% provider_login_url 'google' %}">Login with Google</a>
     {% endif %}
