--- a/explorexp/templates/add_place.html
+++ b/explorexp/templates/add_place.html
@@ -41,47 +41,71 @@
         document.getElementById('id_long').value = location.lng();
     }
 
-    // Function to display place name at the bottom of the screen
+var placeTypes = [
+    "accounting", "airport", "amusement_park", "aquarium", "art_gallery",
+    "atm", "bakery", "bank", "bar", "beauty_salon", "bicycle_store",
+    "book_store", "bowling_alley", "bus_station", "cafe", "campground",
+    "car_dealer", "car_rental", "car_repair", "car_wash", "casino",
+    "cemetery", "church", "city_hall", "clothing_store", "convenience_store",
+    "courthouse", "dentist", "department_store", "doctor", "drugstore",
+    "electrician", "electronics_store", "embassy", "fire_station", "florist",
+    "funeral_home", "furniture_store", "gas_station", "gym", "hair_care",
+    "hardware_store", "hindu_temple", "home_goods_store", "hospital",
+    "insurance_agency", "jewelry_store", "laundry", "lawyer", "library",
+    "light_rail_station", "liquor_store", "local_government_office", "locksmith",
+    "lodging", "meal_delivery", "meal_takeaway", "mosque", "movie_rental",
+    "movie_theater", "moving_company", "museum", "night_club", "painter",
+    "park", "parking", "pet_store", "pharmacy", "physiotherapist",
+    "plumber", "police", "post_office", "primary_school", "real_estate_agency",
+    "restaurant", "roofing_contractor", "rv_park", "school", "secondary_school",
+    "shoe_store", "shopping_mall", "spa", "stadium", "storage", "store",
+    "subway_station", "supermarket", "synagogue", "taxi_stand", "tourist_attraction",
+    "train_station", "transit_station", "travel_agency", "university", "veterinary_care",
+    "zoo"
+];
+
 function displayPlaceName(location) {
     var geocoder = new google.maps.Geocoder();
     geocoder.geocode({ 'location': location }, function(results, status) {
         if (status === 'OK') {
             if (results[0]) {
-                var placeName = '';
-                // Iterate through address components
-                for (var i = 0; i < results[0].address_components.length; i++) {
-                    var addressComponent = results[0].address_components[i];
-                    // Check for types representing the name of the place
-                    if (addressComponent.types.includes('establishment') ||
-                        addressComponent.types.includes('point_of_interest') ||
-                        addressComponent.types.includes('premise') ||
-                        addressComponent.types.includes('natural_feature') ||
-                        addressComponent.types.includes('park') ||
-                        addressComponent.types.includes('airport') ||
-                        addressComponent.types.includes('transit_station') ||
-                        addressComponent.types.includes('subway_station') ||
-                        addressComponent.types.includes('train_station') ||
-                        addressComponent.types.includes('bus_station')) {
-                        placeName = addressComponent.short_name;
+                // Check if the result has a specific establishment name
+                var placeName = results[0].short_name;
+                var type_list = results[0].types;
+                var place_type;
 
-                        break;  // Stop iteration after finding a suitable type
+                for (var i = 0; i < type_list.length; i++) {
+                    if (placeTypes.includes(type_list[i])) {
+                        place_type = type_list[i];
+                        break;
                     }
+
                 }
-                // If a place name is found, display it; otherwise, use formatted address
+
                 if (placeName) {
-                    document.getElementById('placeName').innerText = placeName;
+                    // If a specific establishment name is found, display it
+                    document.getElementById('id_name').value = placeName;
                 } else {
+                    // If no specific establishment name is found, use the formatted address
                     var formattedAddress = results[0].formatted_address;
-                    document.getElementById('placeName').innerText = formattedAddress;
+                    document.getElementById('id_name').value = formattedAddress;
+                }
+
+                if (place_type) {
+                    document.getElementById('id_type').value = place_type;
+                } else {
+                    var place_type = 'general';
+                    document.getElementById('id_type').value = place_type;
                 }
             } else {
-                document.getElementById('placeName').innerText = 'No place found';
+                document.getElementById('id_name').value = 'No place found';
             }
         } else {
-            document.getElementById('placeName').innerText = 'Geocoder failed due to: ' + status;
+            document.getElementById('id_name').value = 'Geocoder failed due to: ' + status;
         }
     });
 }
+
 
 </script>
 
@@ -117,6 +141,8 @@ function displayPlaceName(location) {
     {% csrf_token %}
     <label for="id_name">Name:</label>
     <input type="text" id="id_name" name="name" required>
+    <label for="id_type">Type:</label>
+    <input type="text" id="id_type" name="type" required>
     <input type="hidden" id="id_lat" name="lat">
     <input type="hidden" id="id_long" name="long">
     <button type="submit">Submit Place</button>
@@ -124,5 +150,6 @@ function displayPlaceName(location) {
 
 <!-- Display Place Name -->
 <div id="placeName"></div>
+    <div id="placeInfo"></div>
 
 {% endblock %}
