--- a/explorexp/templates/categories.html
+++ b/explorexp/templates/categories.html
@@ -5,8 +5,6 @@
 <head>
     <meta charset="UTF-8">
     <title>Categories</title>
-
-
 </head>
 <body>
 
@@ -52,7 +50,7 @@
   <button class="filterButton category-link" data-location-type="Restaurants">Restaurants</button>
   <button class="filterButton category-link" data-location-type="Night Life">Night Life</button>
 <script>
-    function initMap() {
+    function initMap(data) {
         // Define your Google Maps initialization logic here
         var mapOptions = {
             center: {lat: 38.0336, lng: -78.5080},
@@ -67,6 +65,8 @@
         ]
         };
         var map = new google.maps.Map(document.getElementById('map'), mapOptions);
+
+
     }
 </script>
 
@@ -92,12 +92,35 @@
 // Attach click event to all elements with the 'category-link' class
 document.querySelectorAll('.category-link').forEach(function(button) {
     button.addEventListener('click', function() {
-        console.log("Button Clicked:", this.dataset.locationType);
-        localStorage.setItem('selectedLocationType', this.dataset.locationType);
-        window.location.href = '/categories/';
+        console.log("Button clicked.")
+        var selectedCategory = this.dataset.locationType;
+
+        // Make an AJAX request to the backend to get locations for the selected category
+        fetch(`/get_locations/?category=${selectedCategory}`)
+            .then(response => response.json())
+            .then(data => {
+                // Clear existing markers
+                markers.forEach(marker => marker.setMap(null));
+                markers = [];
+
+                // Add new markers based on the received data
+                data.locations.forEach(location => {
+                    var marker = new google.maps.Marker({
+                        position: {lat: location.latitude, lng: location.longitude},
+                        map: map,
+                        title: location.name
+                    });
+
+                    markers.push(marker);
+                });
+            })
+            .catch(error => console.error('Error fetching locations:', error));
     });
 });
+
+var markers = [];
 </script>
+
 
 {% endblock %}
 
