--- a/explorexp/templates/categories.html
+++ b/explorexp/templates/categories.html
@@ -41,16 +41,16 @@
     }
  </style>
 <h1>Welcome to categories!</h1>
-  <button class="filterButton category-link" data-location-type="Study Spaces">Study Spaces</button>
-  <button class="filterButton category-link" data-location-type="Lounges">Lounges</button>
-  <button class="filterButton category-link" data-location-type="Café">Cafés</button>
-  <button class="filterButton category-link" data-location-type="Libraries">Libraries</button>
-  <button class="filterButton category-link" data-location-type="Museums">Museums</button>
-  <button class="filterButton category-link" data-location-type="Gyms">Gyms</button>
-  <button class="filterButton category-link" data-location-type="Gyms">Parks</button>
-  <button class="filterButton category-link" data-location-type="Arcades">Arcades</button>
-  <button class="filterButton category-link" data-location-type="Restaurants">Restaurants</button>
-  <button class="filterButton category-link" data-location-type="Night Life">Night Life</button>
+  <button class="filterButton category-link" data-location-type="university library">Study Spaces</button>
+  <button class="filterButton category-link" data-location-type="cafe bakery">Cafés</button>
+  <button class="filterButton category-link" data-location-type="library">Libraries</button>
+    <button class="filterButton category-link" data-location-type="tourist_attraction zoo aquarium movie_theater">Attractions</button>
+  <button class="filterButton category-link" data-location-type="museum art_gallery">Museums</button>
+  <button class="filterButton category-link" data-location-type="gym">Gyms</button>
+  <button class="filterButton category-link" data-location-type="park zoo tourist_attraction campground">Parks</button>
+  <button class="filterButton category-link" data-location-type="shopping_mall supermarket store book_store">Mall</button>
+  <button class="filterButton category-link" data-location-type="restaurant">Restaurants</button>
+  <button class="filterButton category-link" data-location-type="night_club bar bowling_alley department_store">Night Life</button>
 <script>
     function initMap() {
         // Define your Google Maps initialization logic here
