--- a/explorexp/templates/categories.html
+++ b/explorexp/templates/categories.html
@@ -45,7 +45,7 @@
   <button class="filterButton category-link" data-location-type="Libraries">Libraries</button>
   <button class="filterButton category-link" data-location-type="Museums">Museums</button>
   <button class="filterButton category-link" data-location-type="Gyms">Gyms</button>
-  <button class="filterButton category-link" data-location-type="Gyms">Parks</button>
+  <button class="filterButton category-link" data-location-type="Parks">Parks</button>
   <button class="filterButton category-link" data-location-type="Arcades">Arcades</button>
   <button class="filterButton category-link" data-location-type="Restaurants">Restaurants</button>
   <button class="filterButton category-link" data-location-type="Night Life">Night Life</button>
@@ -92,29 +92,16 @@
 // Attach click event to all elements with the 'category-link' class
 document.querySelectorAll('.category-link').forEach(function(button) {
     button.addEventListener('click', function() {
-        console.log("Button clicked.")
-        var selectedCategory = this.dataset.locationType;
+        var selectedCategories = this.dataset.locationType.split(' ');
 
-        // Make an AJAX request to the backend to get locations for the selected category
-        fetch(`/get_locations/?category=${selectedCategory}`)
-            .then(response => response.json())
-            .then(data => {
-                // Clear existing markers
-                markers.forEach(marker => marker.setMap(null));
-                markers = [];
-
-                // Add new markers based on the received data
-                data.locations.forEach(location => {
-                    var marker = new google.maps.Marker({
-                        position: {lat: location.latitude, lng: location.longitude},
-                        map: map,
-                        title: location.name
-                    });
-
-                    markers.push(marker);
-                });
-            })
-            .catch(error => console.error('Error fetching locations:', error));
+        selectedCategories.forEach(function(category) {
+            fetch(`/get_locations/?category=${category}`)
+                .then(response => response.json())
+                .then(data => {
+                    console.log(`Locations for ${category}:`, data.locations);
+                })
+                .catch(error => console.error(`Error fetching locations for ${category}:`, error));
+        });
     });
 });
 
