--- a/explorexp/templates/map.html
+++ b/explorexp/templates/map.html
@@ -17,6 +17,24 @@
         ]
         };
         var map = new google.maps.Map(document.getElementById('map'), mapOptions);
+
+        data.locations.forEach(function(location) {
+        var marker = new google.maps.Marker({
+            position: { lat: parseFloat(location.lat), lng: parseFloat(location.long) },
+            map: map,
+            title: location.name
+        });
+
+        // Optionally, you can add an info window to display additional information
+        var infoWindow = new google.maps.InfoWindow({
+            content: `<h3>${location.name}</h3>`
+        });
+
+        marker.addListener('click', function() {
+            infoWindow.open(map, marker);
+        });
+    });
+
     }
 </script>
     <script async defer
