Improvements to navbar

--- a/explorexp/templates/navbar.html
+++ b/explorexp/templates/navbar.html
@@ -83,10 +83,10 @@
         margin-bottom: .5em;
     }
 </style>
-<title>TutorMe</title>
+<title>ExploreXP</title>
 <nav>
     <a class="active navleft navdesign" href="{% url 'index' %}"><span class="brsmall"></span>Home</a>
-    <a class="navleft navdesign" href="{% url 'categories' %}"><span class="brsmall"></span>Add Challenges</a>
+    <a class="navleft navdesign" href="{% url 'add_place' %}"><span class="brsmall"></span>Add Challenges</a>
     <a class="navleft navdesign" href="{% url 'categories' %}"><span class="brsmall"></span>Leaderboard</a>
 
     <form id="logoutform" method="POST" action="/logout/" style="float:right;">
