--- a/explorexp/templates/index.html
+++ b/explorexp/templates/index.html
@@ -1,5 +1,5 @@
 {% load socialaccount %}
-{% include 'navbar.html' %}
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -7,10 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 style="text-align: center;"> My google OAuth Project </h1>
     {% if user.is_authenticated %}
+    {% include 'navbar.html' %}
     <p>Welcome. You are logged in as {{user.username}} </p>
     <a href="{% url 'view_profile' username=request.user.username %}">Go to Profile</a>
+    {% include 'categories.html' %}
     {% else %}
         <a href="{% provider_login_url 'google' %}">Login with Google</a>
     {% endif %}
