--- a/explorexp/templates/navbar.html
+++ b/explorexp/templates/navbar.html
@@ -96,4 +96,8 @@
         </button>
     </form>
 
+    <a style = "float:right" class = "navdesign navleft" href="{% url 'view_profile' request.user.username %}">
+        <img style="font-size: 12px; margin-top: 2px" src="../../../static/images/profile.png" width ="50" height="50" alt="Profile">
+    </a>
+
    </nav>
