--- a/explorexp/templates/categories.html
+++ b/explorexp/templates/categories.html
@@ -66,7 +66,7 @@
 
 </script>
 
-<h1>Welcome to categories!</h1>
+<h1>Welcome, {{user.username}}!</h1>
 
   <button class="filterButton category-link" data-location-type="university">Study Spaces</button>
   <button class="filterButton category-link" data-location-type="cafe">Cafés</button>
