Fixes to navigation bar

--- a/explorexp/templates/add_place.html
+++ b/explorexp/templates/add_place.html
@@ -1,7 +1,7 @@
 {% extends 'mapBase.html' %}
 {% load static %}
 {% block content %}
-
+{% include 'navbar.html' %}
 <head>
     <title>Add Place</title>
 </head>
