--- a/explorexp/templates/navbar.html
+++ b/explorexp/templates/navbar.html
@@ -56,19 +56,31 @@
         margin-left: 15px;
         margin-right: 15px;
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-
+        display:flex;
+        justify-content: center;
+        align-items: center;
         top: 0px;
         position: sticky;
     }
 
     .navleft {
-        float: left;
+        display: flex;
+        justify-content: center;
         border-right:1px solid #dedede;
         height: 70px;
+        text-align: center;
+    }
+
+    .navspecial {
+        display: flex;
+        height: 70px;
+        text-align: center;
+        right: 0;
     }
 
     .nav {
-        display:flex
+        display:flex;
+        align-items: center;
     }
 
     .navdesign {
@@ -85,6 +97,7 @@
     .brsmall {
         display: block;
         margin-bottom: .5em;
+        flex-grow: 1;
     }
 </style>
 <title>ExploreXP</title>
@@ -93,12 +106,12 @@
     <a class="navleft navdesign" href="{% url 'add_place' %}"><span class="brsmall"></span>Add Challenges</a>
     <a class="navleft navdesign" href="{% url 'categories' %}"><span class="brsmall"></span>Leaderboard</a>
 
-    <a style = "float:right" class = "navdesign navleft" href="{% url 'logout' %}">
-        <img style="font-size: 12px; margin-top: 2px" src="../../../static/images/logout.png" width ="50" height="50" alt="Logout">
+    <a class = "navdesign navleft" href="{% url 'view_profile' request.user.username %}">
+        <img style="font-size: 12px; margin-top: 2px" src="../../../static/images/profile.png" width ="50" height="50" alt="Profile">
     </a>
 
-    <a style = "float:right" class = "navdesign navleft" href="{% url 'view_profile' request.user.username %}">
-        <img style="font-size: 12px; margin-top: 2px" src="../../../static/images/profile.png" width ="50" height="50" alt="Profile">
+    <a style="float:right;" class = "navdesign navspecial" href="{% url 'logout' %}">
+        <img style="font-size: 12px; margin-top: 2px; float:right;" src="../../../static/images/logout.png" width ="50" height="50" alt="Logout">
     </a>
 
    </nav>
