Added regex to code

--- a/explorexp/templates/categories.html
+++ b/explorexp/templates/categories.html
@@ -184,7 +184,7 @@ function initMap(locations) {
 
             const infoWindow = new google.maps.InfoWindow({
                 content: `<div><strong><center>${location.name}</center></strong>` +
-                    `<center><a href="/placePage/${location.name_slug}">View Page</a></center></div>`
+                    `<center><a href="/placePage/${location.name}">View Page</a></center></div>`
             });
 
             marker.addListener('click', function() {
