spruced up login page

--- a/explorexp/templates/index.html
+++ b/explorexp/templates/index.html
@@ -5,16 +5,62 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ExploreXP Home</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            height: 100vh;
+            overflow: hidden; /* Prevent scrolling */
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            align-items: center; /* Center items horizontally */
+            background-color: #fdfcfa; /* Very light cream color */
+        }
+
+        .gif-container {
+            flex-grow: 1;
+            display: flex;
+            justify-content: center; /* Center items horizontally */
+            align-items: center; /* Center items vertically */
+        }
+
+        .gif-container img {
+            width: 70vw; /* Set width to 70% of viewport width */
+            height: auto; /* Maintain aspect ratio */
+            max-width: 100%; /* Ensure image does not exceed container width */
+            max-height: 70vh; /* Set maximum height to 70% of viewport height */
+        }
+
+        .login-container {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
+        .login-button {
+            cursor: pointer;
+            display: inline-block; /* Ensure button behaves like a block element */
+            transition: all 0.3s ease; /* Add transition for smooth effect */
+        }
+
+        .login-button:hover {
+            transform: scale(1.1); /* Scale the button by 10% when hovered */
+        }
+    </style>
 </head>
 
 <body>
     {% if user.is_authenticated %}
         {% include 'navbar.html' %}
         {% include 'categories.html' %}
-
-
     {% else %}
-        <a href="{% provider_login_url 'google' %}">Login with Google</a>
+        <div class="gif-container">
+            <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExYnAyNjZqaDliODc3dHQyajU5NHNodnlwN3ptY2lrNHMzbWUxNHd0byZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/AtnhTmX2BfJMaJa73A/giphy.gif" alt="GIF">
+        </div>
+
+        <a href="{% provider_login_url 'google' %}">
+            <img class='login-button' src="../../../static/images/play_button.png" alt="Login with Google">
+        </a>
     {% endif %}
 
 
