push before i checkout

--- a/explorexp/templates/navbar.html
+++ b/explorexp/templates/navbar.html
@@ -17,7 +17,7 @@
     body {
         font-family: "Avenir", "Proxima Nova", Serif;
         background-color: #F7F4EB;
-
+        margin: 40px
     }
 
     h1 {
