--- a/explorexp/templates/placePage.html
+++ b/explorexp/templates/placePage.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+{% include 'navbar.html' %}
 <head>
     <meta charset="UTF-8">
-<<<<<<< HEAD
-    <title>Title</title>
+    <title>{{PLACE_NAME}}</title>
   <p>Welcome to the Place Page</p>
-    <title><title>{{ place.name }}</title></title>
-    <p>Welcome to placePage!</p>
     <p>The name is: (Somehow put restaurant name here)</p>
 </head>
 <body>
