--- a/explorexp/templates/categories.html
+++ b/explorexp/templates/categories.html
@@ -32,7 +32,7 @@
       display: inline-block;
       padding: 10px 20px;
       margin: 10px;
-      background-color: #f46e1e;
+      background-color: #FFBA08;
       color: #fff;
       text-decoration: none;
       border-radius: 5px;
@@ -42,6 +42,77 @@
     .category-link:hover {
       background-color: #f46e1e;
     }
+.category-link {
+  appearance: none;
+  background-color: transparent;
+  border: 2px solid #1A1A1A;
+  border-radius: 15px;
+  box-sizing: border-box;
+  color: #3B3B3B;
+  cursor: pointer;
+  display: inline-block;
+  font-family: Roobert,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+  font-size: 16px;
+  font-weight: 600;
+  line-height: normal;
+  margin: 15px;
+    margin-top: 0;
+    margin-bottom: 0;
+  min-height: 60px;
+  min-width: 0;
+  outline: none;
+  padding: 16px 24px;
+  text-align: center;
+  text-decoration: none;
+  transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  width: 9.5%;
+  will-change: transform;
+}
+
+.category-link:disabled {
+  pointer-events: none;
+}
+
+.category-link:hover {
+  color: #fff;
+  background-color: #3F88C5;
+  transform: translateY(-2px);
+    border: 2px solid #3F88C5;
+}
+
+.category-link:active {
+  box-shadow: none;
+  transform: translateY(0);
+}
+
+.btn_sub {
+  width: 100px; /* Adjust width as needed */
+  height: 100px; /* Adjust height as needed */
+  background-image: url('explorexp/static/images/search.jpg');
+  background-size: cover; /* Adjust background size as needed */
+  background-repeat: no-repeat; /* Prevent background image from repeating */
+  background-position: center; /* Center the background image */
+  border: none; /* Remove border */
+  outline: none; /* Remove outline */
+    background-color: transparent;
+}
+
+
+#id_type {
+  width: 10%; /* Adjust width as needed */
+  padding: 10px; /* Adjust padding as needed */
+    padding: 16px 24px;
+     border: 2px solid #1A1A1A;
+   background-color: transparent;
+  border-radius: 15px;
+    font-family: Roobert,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+}
+
+
+
  </style>
 
 <script>
@@ -67,27 +138,28 @@
 
 </script>
 
-<h1>Welcome to categories!</h1>
-
-  <button class="filterButton category-link" data-location-type="university">Study Spaces</button>
+<div class="scrollable-container">
   <button class="filterButton category-link" data-location-type="cafe">Cafés</button>
   <button class="filterButton category-link" data-location-type="library">Libraries</button>
   <button class="filterButton category-link" data-location-type="tourist_attraction">Attractions</button>
   <button class="filterButton category-link" data-location-type="museum">Museums</button>
   <button class="filterButton category-link" data-location-type="gym">Gyms</button>
   <button class="filterButton category-link" data-location-type="park">Parks</button>
-  <button class="filterButton category-link" data-location-type="shopping_mall">Mall</button>
   <button class="filterButton category-link" data-location-type="restaurant">Restaurants</button>
   <button class="filterButton category-link" data-location-type="bar">Night Life</button>
 
-  <form id="categoryForm" method="post">
+    <div class="dropdown-content" id="categoryForm">
         {% csrf_token %}
-        <label for="id_type">Or Select a Category:</label>
         <select id="id_type" name="type" required>
-            <option value="" disabled selected>Select a Category</option>
+            <option value="" disabled selected>More Filters</option>
         </select>
-        <button type="button" onclick="submitForm()">Submit Place</button>
-  </form>
+        <button class="btn_sub" type="button" onclick="submitForm()"><img style="width:40px;" src='../../../static/images/search2.png'></button>
+
+</div>
+
+</div>
+
+
 
 <script>
 function capitalizeEachWord(str) {
