--- a/explorexp/templates/placePage.html
+++ b/explorexp/templates/placePage.html
@@ -29,10 +29,9 @@
             vertical-align: top; /* Align to the top of the map */
             padding: 20px;
             width: 40vw; /* Adjust the width of the list as needed */
-            overflow-y: auto; /* Add scroll if the list exceeds the height */
+            height: 80vh; /* Add scroll if the list exceeds the height */
             border-radius: 20px;
             background-color: #6493D8;
-            padding: 20px;
         }
 
         .category-link {
@@ -64,12 +63,16 @@
                 <li>{{ challenge.name }} - {{ challenge.description }}</li>
             {% endfor %}
         </ul>
+        <form action="/url" method="POST">
+            <input type="text" name="first_name" placeholder="Add a challenge!" required>
+            <button type="submit">Submit</button>
+    </form>
     </div>
     <div class="text" style="border:solid" id="show-comments">
         <h1>Adventure Chronicles</h1>
         <ul>
             {% for post in CHRONICLES %}
-                <li>{{ post.date }} - {{ post.place}} - {{ post.challenge.name }} - {{ post.comment }}</li>
+                <li>{{ post.date }} - {{ post.user.username}} - {{ post.place}} - {{ post.challenge.name }} - {{ post.comment }}</li>
             {% endfor %}
         </ul>
     </div>
