changed index screen color

--- a/explorexp/templates/index.html
+++ b/explorexp/templates/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ExploreXP Home</title>
     <style>
-
+    body {
+        background-color: #faf9f6;
+    }
 
         .gif-container {
             flex-grow: 1;
