--- a/explorexp/templates/categories.html
+++ b/explorexp/templates/categories.html
@@ -115,6 +115,7 @@
      border: 2px solid #1A1A1A;
    background-color: transparent;
   border-radius: 15px;
+    font-weight: 600;
     font-family: Roobert,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
 }
 
