--- a/explorexp/templates/categories.html
+++ b/explorexp/templates/categories.html
@@ -214,9 +214,10 @@ function capitalizeEachWord(str) {
                         categoryList.appendChild(categoryHeading);
 
                         data.locations.forEach(function(place) {
-                        var placeItem = document.createElement("p");
+                        var placeItem = document.createElement("a");
                         placeItem.style.fontSize = "30px";
-                        placeItem.textContent = place.name; // Adjust this based on your place object
+                        placeItem.textContent = place.name + '\n'; // Adjust this based on your place object
+                        placeItem.href = `/placePage/?name_slug=${place.name}`;
                         categoryList.appendChild(placeItem);
                     });
 
@@ -263,10 +264,12 @@ document.querySelectorAll('.category-link').forEach(function(button) {
 
                 data.locations.forEach(function(place) {
                      if (place.name) {
-                     var placeItem = document.createElement("p");
+                     var placeItem = document.createElement("a");
                      placeItem.style.fontSize = "30px";
-                     placeItem.textContent = place.name;
+                     placeItem.textContent = place.name + '\n';
+                     placeItem.href = `/placePage/?name_slug=${place.name}`;
                      categoryList.appendChild(placeItem);
+
                       }
                 });
                 } else {
