--- a/explorexp/templates/navbar.html
+++ b/explorexp/templates/navbar.html
@@ -105,7 +105,7 @@
 <nav class = "nav">
     <a class="active navleft navdesign" href="{% url 'index' %}"><span class="brsmall"></span>Home</a>
     <a class="navleft navdesign" href="{% url 'add_place' %}"><span class="brsmall"></span>Add Place</a>
-    <a class="navleft navdesign" href="{% url 'categories' %}"><span class="brsmall"></span>Leaderboard</a>
+    <a class="navleft navdesign" href="{% url 'leaderboard' %}"><span class="brsmall"></span>Leaderboard</a>
 
     <a class = "navdesign navleft" href="{% url 'view_profile' request.user.username %}">
         <img style="font-size: 12px; margin-top:8px" src="../../../static/images/user1.png" width ="33" height="33" alt="Profile">
